@@ -1372,10 +1372,10 @@ class testMeetingItem(PloneMeetingTestCase):
         self.assertTrue(clonedItem.adviceIsInherited('vendors'))
         self.assertTrue(clonedItem.adviceIsInherited('developers'))
         # optional and automatic advices that were not given are inherited
-        # but not the power adviser advice
+        # as well as the power adviser advice
         self.assertTrue(clonedItem.adviceIsInherited('group1'))
         self.assertTrue(clonedItem.adviceIsInherited('group2'))
-        self.assertFalse(clonedItem.adviceIsInherited('poweradvisers'))
+        self.assertTrue(clonedItem.adviceIsInherited('poweradvisers'))
 
     def test_pm_AddAutoCopyGroups(self):
         '''Test the functionnality of automatically adding some copyGroups depending on
